<resources>
    <string name="app_name">Movies</string>
    <string name="profile">Meus dados</string>
    <string name="logout">Sair</string>
    <string name="similar_movies">Filmes Parecidos</string>
    <string name="rent_movie_button">Alugar</string>
    <string name="rating">Avaliação</string>
    <string name="title_activity_login">Sign in</string>
    <string name="skip">Sair</string>
    <string name="next">Próximo</string>
    <string name="offerTitleLabel">Informe a quantidade de filmes que você deseja assistir</string>
    <string name="offerConfirm">Confirmar e Prosseguir</string>
    <string name="acceptOffer">Aceito todos os termos e condições </string>
    <string name="offerMovieLabel">O valor do seu plano será R$</string>
    <string name="rentMovie">Adicionar a sua lista</string>
    <string name="rented">Adicionado</string>
    <string name="planUser">Plano: {{movie}} Filmes/30 dias</string>
    <string name="planUserDays">Restam {{days}} dias</string>
    <string name="planUserMovie">Você ainda pode alugar mais {{movie}} Filmes</string>
    <string name="data_list_buy">Data:</string>
    <string name="value_list_buy">Valor:</string>
    <string name="type_list_buy">Tipo:</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirm_password">Confirme sua senha</string>
    <string name="prompt_userName">Nome de Usuário</string>
    <string name="action_sign_in">Entre ou Registre-se</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">O e-mail utilizado é invalido</string>
    <string name="error_invalid_password">O password é muito curto</string>
    <string name="error_incorrect_password">Seu nome de usuário ou sua senha não correspondem</string>
    <string name="error_field_required">Este campo é obrigatorio</string>
    <string name="prompt_name">Nome</string>
    <string name="offer_dialog_title">Selecione o plano adicional de sua preferencia.</string>
    <string name="offer_valid_days">Plano válido por 30 dias</string>

</resources>
