<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtPlanInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/planUser"
        android:textSize="@dimen/title_padding" />

    <TextView
        android:id="@+id/txtDaysInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planUserDays"
        android:textSize="@dimen/minimum_padding" />

    <TextView
        android:id="@+id/txtMovieInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planUserMovie"
        android:textSize="@dimen/medium_padding" />

    <com.br.movies.view.components.MovieProgressView
        android:id="@+id/progressUsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />


</LinearLayout>